@@ -3,4 +3,4 @@ Type=smb-network;smb-server
 Exec=@libexecdir@/gvfsd-smb-browse
 DBusName=org.gtk.vfs.mountpoint.smb_browse
 AutoMount=true
-
+Scheme=smb
