@@ -2,3 +2,4 @@
 Type=smb-share
 Exec=@libexecdir@/gvfsd-smb
 AutoMount=false
+Scheme=smb
