@@ -1,3 +1,12 @@
+2008-03-04  Alexander Larsson  <alexl@redhat.com>
+
+        * client/gdaemonvfs.c:
+	Avoid duplications in supported_uris.
+	
+        * daemon/smb-browse.mount.in:
+        * daemon/smb.mount.in:
+	Add scheme info so smb is listed in supported_uris again.
+
 2008-03-03  Christian Kellner  <gicmo@gnome.org>
 
 	* daemon/gvfsbackendhttp.c:
